# 3D-Neuronal-Lattice-Model

./: README.md  cell.py  evaluate_model.py  explore_lattice_patterns.ipynb  lattice_patterns.py  lattice_visualizer.py  lightning_trainer.py  pulse_propagation.py  pyproject.toml  requirements.txt  run_ddp_h100.sh  run_lightning_hpo.sh  search_optimal_patterns.ipynb  search_pulse_patterns.ipynb  sparse_lattice.py  submit_lightning_hpo.sh  submit_slurm_h100.sh  tensor_lattice.py  test_toroidal_lattice.ipynb  toroidal_lattice.py  train_mnist.sh  train_toroidal_ddp.py  train_toroidal_embeddings.ipynb  train_toroidal_lightning.py  train_windows_logic.ipynb  trainer.py  writeup2-10-2026.txt
kernels/: __init__.py  cuda_kernels.cu  metal_kernels.metal  setup.py
